--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "parcel-transformer-geojson",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A simple geojson to json transformer for parcel v2",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
