chore: parcel warns if engine range not specified
https://parceljs.org/plugin-system/authoring-plugins/#engines

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/asdofindia/parcel-transformer-geojson#readme",
   "dependencies": {
     "@parcel/plugin": "^2.4.1"
+  },
+  "engines": {
+    "parcel": "2.x"
   }
 }
