feat: switch directly to js

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/asdofindia/parcel-transformer-geojson#readme",
   "dependencies": {
-    "@parcel/plugin": "^2.4.1"
+    "@parcel/plugin": "^2.4.1",
+    "json5": "^2.2.1"
   },
   "engines": {
     "parcel": "2.x"
